FusionDev Backup1/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENSX_EDM__Material__c</fullName>
        <description>SAP Material Number</description>
        <label>Material</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epicor_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to evaluate whether or not the part is flagged as SF enabled in epicor in order to sync it over to SF.</description>
        <label>SF_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Ship_Date__c</fullName>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Master_Code__c</fullName>
        <label>Commerce Cloud Master Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Product_Image_URL__c</fullName>
        <label>Product Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Product_URL__c</fullName>
        <label>Product URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Synced_by_UnifyCommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced by UnifyCommerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNum__c</fullName>
        <label>PartNum</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProdID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2IsFreePartEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the product qualifies for being listed as a free part for ERP Orders.</description>
        <inlineHelpText>If the product qualifies for status as a free part.</inlineHelpText>
        <label>Is Free Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XRefPartNum__c</fullName>
        <label>XRefPartNum</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productkey__c</fullName>
        <label>productkey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ramsideloc__c</fullName>
        <label>ramsideloc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>Product_Category__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PartNum__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Products</fullName>
        <columns>Product_Category__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PartNum__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Products</label>
    </listViews>
    <listViews>
        <fullName>All_InActive_Products</fullName>
        <columns>Product_Category__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PartNum__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All InActive Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>